--- a/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
+++ b/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
@@ -5,10 +5,53 @@
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-sm">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
+<h2>Opiskelijarekisteri</h2>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Opiskelijanumero</th>
+            <th>Nimi</th>
+            <th>Sähköposti</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>AB7474</td>
+            <td>Matti Möttönen</td>
+            <td>matti@stud.pointcollege.fi</td>
+        </tr>
+        <tr>
+            <td>DFG7474</td>
+            <td>Maija Möttönen</td>
+            <td>maija@stud.pointcollege.fi</td>
+        </tr>
+        <tr>
+            <td>SD474</td>
+            <td>Ville Vilkas</td>
+            <td>villev@stud.pointcollege.fi</td>
+        </tr>
+        <tr>
+            <td>AB7474</td>
+            <td>Matti Möttönen</td>
+            <td>matti@stud.pointcollege.fi</td>
+        </tr>
+        <tr>
+            <td>DFG7474</td>
+            <td>Maija Möttönen</td>
+            <td>maija@stud.pointcollege.fi</td>
+        </tr>
+        <tr>
+            <td>SD474</td>
+            <td>Ville Vilkas</td>
+            <td>villev@stud.pointcollege.fi</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="row hidden">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
