--- a/BootstrapWebApp/BootstrapWebApp/Content/Site.css
+++ b/BootstrapWebApp/BootstrapWebApp/Content/Site.css
@@ -3,6 +3,10 @@
     padding-bottom: 20px;
 }
 
+.text-primary {
+  color: #226baa !important;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
